[gd_scene load_steps=9 format=3 uid="uid://dtg2etj80t2d6"]

[ext_resource type="Script" path="res://scenes/enemies/enemy_gun_fire.gd" id="1_4dqph"]
[ext_resource type="Texture2D" uid="uid://covt7428alchp" path="res://sprites/enemies/gun_fire_enemy.png" id="1_xg1cs"]
[ext_resource type="Texture2D" uid="uid://cavlckg2r7ane" path="res://animations/enemies/lazerEnemyAnimation/laserEnemyAnimation1.png" id="3_shb4t"]
[ext_resource type="Texture2D" uid="uid://dff2ecxif0vcv" path="res://animations/enemies/lazerEnemyAnimation/laserEnemyAnimation2.png" id="4_8co2m"]
[ext_resource type="Texture2D" uid="uid://bljsh7eh04j25" path="res://animations/enemies/lazerEnemyAnimation/laserEnemyAnimation3.png" id="5_coeaq"]
[ext_resource type="Texture2D" uid="uid://btbiov05l0oh3" path="res://animations/enemies/lazerEnemyAnimation/laserEnemyAnimation4.png" id="6_rau0v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rlxwn"]
radius = 7.0
height = 48.0

[sub_resource type="SpriteFrames" id="SpriteFrames_rdkuv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_shb4t")
}, {
"duration": 1.0,
"texture": ExtResource("4_8co2m")
}, {
"duration": 1.0,
"texture": ExtResource("5_coeaq")
}, {
"duration": 1.0,
"texture": ExtResource("6_rau0v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="enemy_gun_fire" type="Area2D"]
script = ExtResource("1_4dqph")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -3.14159
texture = ExtResource("1_xg1cs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_rlxwn")

[node name="explosionTimer" type="Timer" parent="."]

[node name="explosionAnimation" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_rdkuv")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="explosionTimer" to="." method="_on_explosion_timer_timeout"]
